--- a/horoscope/templates/horoscope/index.html
+++ b/horoscope/templates/horoscope/index.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Menu</title>
-</head>
-<body>
+{% extends "base.html"%}
+    {% block title %}Menu{% endblock %}
+
+{% block content %}
     <ul>
     {% for zodiac in zodiacs %}
         <li><a href="{% url 'horoscope-name' sign_zodiac=zodiac %}">{{ zodiac|capfirst }}</a></li>
     {% endfor %}
         <li style="font-size:30px; color:red"><a href="/horoscope/type">Type</a></li>
     </ul>
-</body>
-</html>
+{% endblock %}
