--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+{% include 'includes/navbar.html' %}
     {% block content %}
     {% endblock %}
 <div style="font-size:40px; text-align: center">END</div>
