--- a/horoscope/templates/horoscope/index.html
+++ b/horoscope/templates/horoscope/index.html
@@ -1,5 +1,12 @@
 {% extends "base.html"%}
-    {% block title %}Menu{% endblock %}
+
+{% load static %}
+
+{% block css_additional %}
+    <link rel="stylesheet" href='{% static "horoscope/css/index.css" %}'>
+{% endblock %}
+
+{% block title %}Menu{% endblock %}
 
 {% block content %}
     <ul>
