--- a/horoscope/templates/horoscope/info_zodiac.html
+++ b/horoscope/templates/horoscope/info_zodiac.html
@@ -1,4 +1,9 @@
 {% extends "base.html"%}
+{% load static %}
+
+{% block css_additional %}
+    <link rel="stylesheet" href="{% static 'horoscope/css/info_zodiac.css' %}">
+{% endblock %}
 
 {% block title %}Гороскоп для {{ sign_in_dict|upper }}{% endblock %}
 
