--- a/horoscope/static/horoscope/css/types_zodiacs.css
+++ b/horoscope/static/horoscope/css/types_zodiacs.css
@@ -1,8 +1,11 @@
 
+h1 {text-align: center;
+    color: rgb(140, 100, 21);
+}
 ul {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
     list-style-type: none;
     background-color: rgb(233, 220, 176);
     color: rgb(47, 165, 65);
@@ -15,20 +18,9 @@ ul {
 
 ul li {
     font-size: 30px;
-    text-align: center;
 }
 
 li a {
     color: rgb(57, 125, 39);
     text-decoration: none;
-}
-
-li a:hover{color: rgb(53, 62, 118)}
-
-h2 {
-    font-size: 50px;
-    text-align: center;
-    color: rgb(21, 71, 140);
-    letter-spacing: 8px;
-    text-shadow: 3px 5px 4px rgb(116, 147, 190);
 }
