--- a/horoscope/templates/includes/navbar.html
+++ b/horoscope/templates/includes/navbar.html
@@ -1,5 +1,8 @@
     <nav>
-        <a href="{% url 'horoscope-index' %}">Главная</a> |
-        <a href="{% url 'zodiac-types' %}">По стихиям</a> |
+        <a href="{% url 'horoscope-index' %}">Главная</a>
+        <a href="{% url 'zodiac-types' %}">По стихиям</a>
+        {% for zodiac in name_zodiac %}
+            <a href="{% url 'horoscope-name' sign_zodiac=zodiac %}" >{{zodiac|title}}</a>
+        {%endfor%}
         <a href="https://uznayvse.ru/goroskop/harakteristika-znakov-zodiaka.html">Источник</a>
     </nav>
