--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,6 @@
 {% include 'includes/navbar.html' %}
     {% block content %}
     {% endblock %}
-<div style="font-size:40px; text-align: center">END</div>
+<footer style="font-size:40px; text-align: center">END</footer>
 </body>
 </html>
