--- a/horoscope/templates/horoscope/index.html
+++ b/horoscope/templates/horoscope/index.html
@@ -9,6 +9,7 @@
 {% block title %}Menu{% endblock %}
 
 {% block content %}
+    <h2>Приложение гороскоп</h2>
     <ul>
     {% for zodiac in zodiacs %}
         <li><a href="{% url 'horoscope-name' sign_zodiac=zodiac %}">{{ zodiac|capfirst }}</a></li>
